refactor: adjust some stuff

--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -52,5 +52,8 @@
         "/home/bort/.config/nvim/lua",
         "${3rd}/luv/library",
         "${3rd}/luassert/library"
+    ],
+    "diagnostics.disable": [
+        "missing-fields"
     ]
 }
